<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
    android:id="@+id/framelayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />

    <View
        android:id="@+id/div_tab_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/div_white" />

    <RadioGroup
        android:id="@+id/rg_radio_navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/patrol_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/patrol_task"
            android:gravity="center"
            android:text="@string/patrol_task"
            android:textColor="@drawable/top_radio_button_selector" />

        <RadioButton
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@drawable/top_radio_button_selector" />

        <RadioButton
            android:id="@+id/personal_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/personal_center"
            android:gravity="center"
            android:text="@string/personal_center"
            android:textColor="@drawable/top_radio_button_selector" />
    </RadioGroup>
    <!--<TextView-->
        <!--android:id="@+id/txt"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
</LinearLayout>
